# dev-pipeline

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: architecture.md  checkpoints.md  conventions.md  increments.md  lifecycle.md
skills/dev-pipeline/: SKILL.md
skills/dev-pipeline/agents/: openai.yaml
src/dev_pipeline/: __init__.py  checkpoints.py  cli.py  codex.py  conventions.py  deployment.py  events.py  evidence.py  increments.py  lifecycle.py
tests/: test_checkpoints.py  test_cli.py  test_conventions.py  test_deployment.py  test_evidence.py  test_increments.py  test_lifecycle.py
