[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "dev-pipeline"
version = "0.1.0"
description = "A Codex-centered owner pipeline for evidence-driven software development"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Roman Dudov" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
dev-pipeline = "dev_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
